--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-pip install -U google-generativeai
-pip install streamlit numpy scipy google-generativeai
+streamlit
+google-generativeai
+slack_sdk
+numpy
+scipy
