--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,9 @@ librosa
 numpy
 soundfile
 pydub
-pip install streamlit librosa numpy praat-parselmouth
+pip 
+install 
+streamlit
+librosa
+numpy
+praat-parselmouth
