--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,24 @@
 streamlit>=1.35.0
 google-generativeai>=0.8.3
-pyworld
-pygame
 pandas
-kivy
-librosa
-numpy
-soundfile
-pydub
-praat-parselmouth
-firebase-admin
-requests
-streamlit-player
-pyserial
-pandas
-streamlit-js-evaldeemix
-fairseq==0.12.2
-faiss-cpu==1.7.3
-ffmpeg-python>=0.2.0
-gradio==3.39.0
-lib==4.0.0
-librosa==0.9.1
 numpy==1.23.5
-onnxruntime_gpu
+scipy==1.11.1
+librosa==0.9.1
+pyworld==0.3.4
+soundfile==0.12.1
+pydub==0.25.1
 praat-parselmouth>=0.4.2
 pedalboard==0.7.7
-pydub==0.25.1
-pyworld==0.3.4
-Requests==2.31.0
-scipy==1.11.1
-soundfile==0.12.1
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.0.1+cu118
+fairseq==0.12.2
+faiss-cpu==1.7.3
 torchcrepe==0.0.20
 tqdm==4.65.0
 yt_dlp==2023.7.6
-sox==1.4.1
+ffmpeg-python>=0.2.0
+requests==2.31.0
+firebase-admin
+streamlit-player
+streamlit-js-eval
+pyserial
+onnxruntime-gpu
+# สำหรับ Torch ให้ใช้คำสั่งติดตั้งแยกใน Terminal จะชัวร์กว่า
